--- a/client/src/Pages/Description/Description.scss
+++ b/client/src/Pages/Description/Description.scss
@@ -14,7 +14,13 @@
     font-size: 30px;
     font-weight: 550;
 }
-
+.DescriptionPage-TopDetails{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 80%;
+}
 .Description-Top{
     display: flex;
     flex-flow: row wrap;
@@ -86,3 +92,12 @@
     border-radius: 4px;
     padding: 5px;
 }
+
+.Description-SubmitReviewButton{
+    width: 160px;
+    height: 48px;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 9px;
+}
+
