--- a/client/src/Components/ProductCard/ProductCard.scss
+++ b/client/src/Components/ProductCard/ProductCard.scss
@@ -87,9 +87,10 @@ position: absolute;
     backface-visibility: hidden;
    width: 100%;
    height: 100%;
-  
+  padding: 20px;
    transform: rotateY(180deg);
 }
+
 .ProductCard-BackSide-product-description{
     width: 100%;
     max-width: 280px;
@@ -119,13 +120,15 @@ position: absolute;
     max-width: 130px;
     height: 40px;
     border-radius: 5px;
-    background-color: rgb(41, 162, 41);
+    background-color: red;
     color: white;
     font-size: 15px;
     font-weight: 500;
     cursor: pointer;
     border: none;
     outline: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .ProductCard-Wrapper:hover .ProductCard-Container{
@@ -149,6 +152,14 @@ overflow-x: hidden;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
+    width: 100%;
+}
+.cpc00011-cart-quant-btn-wrap{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 .ProductCard-location-text{
   overflow: hidden;
@@ -169,6 +180,21 @@ text-align: left;
 
 ._300px{
     width: 300px !important;
+}
+.cpc00011-back-inner-bottom-wrap{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.cpc00011-cart-buttons-wrap{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 .ProductCart-ViewProductButton{
     margin-top: 10px;
