--- a/client/src/Components/ProductComponent/This.css
+++ b/client/src/Components/ProductComponent/This.css
@@ -67,7 +67,7 @@
     flex-flow: column wrap;
     justify-content: space-between;
     align-items: center;
-    max-width: 70%;
+    width: 100%;
 }
 
 .carcfp34-details-wrap{
@@ -80,11 +80,12 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    min-width: 280px;
 }
 
 .carcfp34-details-wrap{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: space-between;
     align-items: center;
     width: 90%;
@@ -186,3 +187,15 @@ overflow: hidden;
 }
 
 
+
+.carcfp34-restaurant-group-wrap-column{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.carcfp34-restaurant-name{
+    max-width: 300px;
+}
