--- a/client/src/Components/addRestaurant/This.css
+++ b/client/src/Components/addRestaurant/This.css
@@ -3,6 +3,7 @@
     background-color: white;
     box-shadow: 0px 5px 8px 1.5px rgba(0,0,0,0.6);
     padding: 10px;
+    
 }
 
 .cpapc33-ProductCard-option-button{
@@ -48,6 +49,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    max-width: 500px;
 }
 
 .carc23-fieldset-wrap{
