--- a/client/src/Pages/Acknoledgment/Acknoloedgement.css
+++ b/client/src/Pages/Acknoledgment/Acknoloedgement.css
@@ -5,6 +5,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .Acknoledgemnt-Container{
