--- a/client/src/Pages/Admin/Admin.css
+++ b/client/src/Pages/Admin/Admin.css
@@ -5,7 +5,7 @@
     flex-flow: column nowrap;
     align-items: center;
     position: relative;
-   
+   background-color: white;
 }
 .Top-Pane{
     width:100%;
