--- a/client/src/Pages/Cart/Cart.css
+++ b/client/src/Pages/Cart/Cart.css
@@ -5,9 +5,11 @@
     display: flex;
     flex-flow: column nowrap;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    margin-top: 50px;
+    margin-top: 30px;
     justify-items: space-around;
     align-items: center;
+    background-color: white;
+    
 }
 .pcart14-cart-header-wrap{
     width: 50%;
@@ -78,3 +80,39 @@ width: 100%;
     font-weight: 500;
 }
 
+.pcart14-cart-restaurant-wrap{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 10px;
+
+}
+.pcart14-cart-restaurant-header-wrap{
+    display: flex;
+    flex-flow:row wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+.pcart14-cart-restaurant-header{
+    text-align: left;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 450;
+
+}
+
+.pcart14-cart-restaurant-options-button{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    border-radius: 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    min-width: 130px;
+    min-height: 40px;
+}
