--- a/client/src/Pages/Checkout/this.css
+++ b/client/src/Pages/Checkout/this.css
@@ -8,6 +8,7 @@
     align-items:center;
     box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
     margin-top: 50px;
+    background-color: white;
 }
 
 .pc17-title-wrap{
