--- a/client/src/Pages/Description/Description.scss
+++ b/client/src/Pages/Description/Description.scss
@@ -9,6 +9,7 @@
     align-items: center;
     box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
     margin-top: 50px;
+    background-color: white;
 }
 
 .Description-FullName{
@@ -114,3 +115,9 @@
     padding-top: 9px;
 }
 
+
+.Description-Rest-Desc-wrap{
+    display: flex;
+    flex-flow: row wrap;
+    
+}
