--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -12,6 +12,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     margin-top: 50px;
     min-width: 280px;
+    background-color: white;
 }
 
 .Home-title{
