--- a/client/src/Pages/Login/Login.css
+++ b/client/src/Pages/Login/Login.css
@@ -1,4 +1,4 @@
-.LoginPage-OverAll{
+.login-wrap{
 width: 100vw;
 height: 100vh;
 display: flex;
@@ -6,6 +6,9 @@ flex-direction: row;
 justify-content: center;
 align-items: center;
 align-content: center;
+background-image: url("https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-brown-simple-noodle-pasta-western-food-e-commerce-banner-image_174269.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .Login-Wrapper{
@@ -24,6 +27,7 @@ align-content: center;
 .Login-Container{
     display:flex;
     width: 100%;
+    max-width: 400px;
     height: 300px;
     flex-flow: column wrap;
     align-items: center;
@@ -93,18 +97,21 @@ align-content: center;
     align-content: center;
     overflow-x: hidden;
     overflow-y: hidden;
-    background-color: rgb(255, 255, 255);
+    
 }
 
 .login-container{
     width: 50%;
-    height: 100%;
+    height: 80%;
+    max-width: 400px;
+    min-width: 300px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
     align-items: center;
     align-content: center;
-   
+    background-color: white;
+    box-shadow: 0px 0px 10px 2px rgb(103, 103, 103) , 0px 0px 10px 2px rgb(94, 93, 93) ;
 }
 
 .login-box{
@@ -130,9 +137,12 @@ align-content: center;
 .login-title{
  margin-bottom: 20px;
  font-weight: 600;
- font-family:'Courier New', Courier, monospace;
- font-size: 23px;
- color: rgb(121, 130, 130);
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ font-size: 28px;
+ 
+ letter-spacing: 0.4px;
+ word-spacing: 2px ;
+ color: rgb(255, 1, 1);
 }
 .login-innerBox{
     width:300px;
@@ -170,6 +180,7 @@ align-content: center;
  justify-content: center;
  align-items: center;
  align-content: center;
+ margin-bottom: 4px;
 }
 
 .login-signUpWrap{
