--- a/client/src/Pages/Query/Query.scss
+++ b/client/src/Pages/Query/Query.scss
@@ -11,6 +11,7 @@
    min-width: 280px;
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
    margin-top: 50px;
+   background-color: white;
 }
 .QueryHeader{
 display: flex;
