--- a/client/src/Pages/User/User.css
+++ b/client/src/Pages/User/User.css
@@ -5,7 +5,7 @@
     flex-flow: column nowrap;
     align-items: center;
     position: relative;
-   
+    background-color: white;
 }
 .Top-Pane{
     width:100%;
@@ -178,4 +178,12 @@ align-items: center;
   width: 140px;
   height: 30px;
   font-size: larger;
+}
+
+.pu19-order-list-item-each-header{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
